environment.Environment.scala.error
Erreur de compilation :
Environment:2: error: type mismatch;
 found   : Unit
 required: Boolean
  while(estSurBiscuit()){
  ^